day-10/canary/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cofre-senhas-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Declaração para utilizar canary. Com isso o ingress irá redirecionar um percentual de acessos para outra imagem.
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "30"
    
spec:
  ingressClassName: nginx
  rules:
  - host: localhost # SE FOR AWS: domínio CNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
